refactor util and product package